# Virtual-Machine

./: .gitignore  CMakeLists.txt  CMake_README.md  CMake改造完成总结.md  Makefile  README.md  build.sh  build_simple.sh  test_architectures.py  test_pipeline.py  test_rv32.py  test_toy.py
Asm/: CMakeLists.txt  Makefile  asm  asm.cpp  asm.h  code.h  inter.cpp  inter.h  lexer.cpp  lexer.h  main.cpp  rv32_asm.h  vm.cpp  vm.h
CPU/: CMakeLists.txt  Makefile  alu.cpp  alu.h  architecture.cpp  architecture.h  cache.cpp  cache.h  cache_manager.cpp  cache_manager.h  cpu  main.cpp  memory.cpp  memory.h  mmio.cpp  mmio.h  mmu.cpp  mmu.h  nes_optimizer.cpp  nes_optimizer.h  register.cpp  register.h  rv32.cpp  rv32.h  rv32_main.cpp  tlb.cpp  tlb.h  toy.cpp  toy.h  toy_main.cpp  vm.cpp  vm.h
Common/: CMakeLists.txt  INTEGRATION_GUIDE.md  README.md  example_usage.cpp  log4cpp.conf  log4cpp.properties  simple_test.cpp  test_logger.cpp
Common/include/Common/: Logger.h  SimpleLogger.h
Common/src/: Logger.cpp  SimpleLogger.cpp
Optimizer/: CMakeLists.txt  ast_to_tac.cpp  ast_to_tac_impl.cpp  cfg.cpp  cfg.h  generator.cpp  generator.h  optimizer.cpp  optimizer.h  register_allocator.cpp  register_allocator.h  tac.cpp  tac.h  tac_from_asm.cpp
Parser/: CMakeLists.txt  Makefile  inter.cpp  inter.h  lexer.h  main.cpp  parser.cpp  parser.h
Pipeline/: CMakeLists.txt  pipeline.cpp  pipeline.h  pipeline_main.cpp
tests/: func_only.txt  function_test.txt  simple.txt  simple_func.txt  test1.txt  test2.txt
